--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -13,8 +13,8 @@ if PLAT_GTK
 lexer.*.lpeg=lpeg
 
 # Lexer definitions (
-file.patterns.actionscript=*.as;*.asc
-lexer.$(file.patterns.actionscript)=lpeg_actionscript
+file.patterns.flash=*.as;*.asc
+lexer.$(file.patterns.flash)=lpeg_actionscript
 file.patterns.ada=*.ada;*.adb;*.ads
 lexer.$(file.patterns.ada)=lpeg_ada
 file.patterns.antlr=*.g
@@ -43,8 +43,8 @@ file.patterns.css=*.css
 lexer.$(file.patterns.css)=lpeg_css
 file.patterns.cuda=*.cu;*.cuh
 lexer.$(file.patterns.cuda)=lpeg_cuda
-file.patterns.dmd=*.d;*.di
-lexer.$(file.patterns.dmd)=lpeg_dmd
+file.patterns.d=*.d;*.di
+lexer.$(file.patterns.d)=lpeg_dmd
 file.patterns.desktop=*.desktop
 lexer.$(file.patterns.desktop)=lpeg_desktop
 file.patterns.diff=*.diff;*.patch
@@ -75,20 +75,20 @@ file.patterns.gtkrc=*.gtkrc
 lexer.$(file.patterns.gtkrc)=lpeg_gtkrc
 file.patterns.haskell=*.hs
 lexer.$(file.patterns.haskell)=lpeg_haskell
-file.patterns.hypertext=*.htm;*.html;*.shtm;*.shtml;*.xhtml
-lexer.$(file.patterns.hypertext)=lpeg_hypertext
+file.patterns.html=*.htm;*.html;*.shtm;*.shtml
+lexer.$(file.patterns.html)=lpeg_hypertext
 file.patterns.odl=*.idl;*.odl
 lexer.$(file.patterns.odl)=lpeg_odl
 file.patterns.inform=*.inf
 lexer.$(file.patterns.inform)=lpeg_inform
-file.patterns.ini=*.cfg;*.cnf;*.conf;*.inf;*.ini;*.reg
+file.patterns.ini=*.cfg;*.cnf;*.inf;*.ini;*.reg
 lexer.$(file.patterns.ini)=lpeg_ini
 file.patterns.Io=*.io
 lexer.$(file.patterns.Io)=lpeg_Io
 file.patterns.java=*.bsh;*.java
 lexer.$(file.patterns.java)=lpeg_java
-file.patterns.javascript=*.js;*.jsfl
-lexer.$(file.patterns.javascript)=lpeg_javascript
+file.patterns.js=*.js;*.jsfl
+lexer.$(file.patterns.js)=lpeg_javascript
 file.patterns.jsp=*.jsp
 lexer.$(file.patterns.jsp)=lpeg_jsp
 file.patterns.json=*.json
@@ -129,16 +129,16 @@ file.patterns.props=*.props;*.properties
 lexer.$(file.patterns.props)=lpeg_props
 file.patterns.python=*.sc;*.py;*.pyw
 lexer.$(file.patterns.python)=lpeg_python
-file.patterns.rstats=*.R;*.Rout;*.Rhistory;*.Rt;Rout.save;Rout.fail;*.S
-lexer.$(file.patterns.rstats)=lpeg_rstats
+file.patterns.r=*.R;*.Rout;*.Rhistory;*.Rt;Rout.save;Rout.fail;*.S
+lexer.$(file.patterns.r)=lpeg_rstats
 file.patterns.rebol=*.r;*.reb
 lexer.$(file.patterns.rebol)=lpeg_rebol
 file.patterns.rexx=*.orx;*.rex
 lexer.$(file.patterns.rexx)=lpeg_rexx
 file.patterns.rhtml=*.erb;*.rhtml
 lexer.$(file.patterns.rhtml)=lpeg_rhtml
-file.patterns.ruby=Rakefile;*.rake;*.rb;*.rbw
-lexer.$(file.patterns.ruby)=lpeg_ruby
+file.patterns.rb=Rakefile;*.rake;*.rb;*.rbw
+lexer.$(file.patterns.rb)=lpeg_ruby
 file.patterns.ragel=*.rl
 lexer.$(file.patterns.ragel)=lpeg_ragel
 file.patterns.scheme=*.sch;*.scm
@@ -159,4 +159,6 @@ file.patterns.vhdl=*.vh;*.vhd;*.vhdl
 lexer.$(file.patterns.vhdl)=lpeg_vhdl
 file.patterns.vb=*.asa;*.bas;*.cls;*.ctl;*.dob;*.dsm;*.dsr;*.frm;*.pag;*.vb;*.vba;*.vbs
 lexer.$(file.patterns.vb)=lpeg_vb
+file.patterns.xml=*.dtd;*.svg;*.xhtml;*.xml;*.xsd;*.xsl;*.xslt;*.xul
+lexer.$(file.patterns.xml)=lpeg_xml
 # )
