Updated lexer properties; lexers/lpeg.properties

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -39,6 +39,8 @@ file.patterns.csharp=*.cs
 lexer.$(file.patterns.csharp)=lpeg_csharp
 file.patterns.cmake=*.cmake;*.cmake.in;*.ctest;*.ctest.in
 lexer.$(file.patterns.cmake)=lpeg_cmake
+file.patterns.coffeescript=*.coffee
+lexer.$(file.patterns.coffeescript)=lpeg_coffeescript
 file.patterns.css=*.css
 lexer.$(file.patterns.css)=lpeg_css
 file.patterns.cuda=*.cu;*.cuh
