Added Scala lexer.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -143,6 +143,8 @@ file.patterns.rb=Rakefile;*.rake;*.rb;*.rbw
 lexer.$(file.patterns.rb)=lpeg_ruby
 file.patterns.ragel=*.rl
 lexer.$(file.patterns.ragel)=lpeg_ragel
+file.patterns.scala=*.scala
+lexer.$(file.patterns.scala)=lpeg_scala
 file.patterns.scheme=*.sch;*.scm
 lexer.$(file.patterns.scheme)=lpeg_scheme
 file.patterns.bash=*.bash;*.bashrc;*.bash_profile;*.configure;*.csh;*.sh;*.zsh
