Fold multiple single-line comments with 'fold.line.comments' property.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -6,6 +6,7 @@ lexer.lpeg.home=$(SciteDefaultHome)/lexers
 lexer.lpeg.script=$(lexer.lpeg.home)/lexer.lua
 lexer.lpeg.color.theme=scite
 fold.by.indentation=0
+fold.line.comments=0
 if PLAT_WIN
 	lexerpath.*.lpeg=$(lexer.lpeg.home)/LexLPeg.dll
 if PLAT_GTK
@@ -143,8 +144,6 @@ file.patterns.rb=Rakefile;*.rake;*.rb;*.rbw
 lexer.$(file.patterns.rb)=lpeg_ruby
 file.patterns.ragel=*.rl
 lexer.$(file.patterns.ragel)=lpeg_ragel
-file.patterns.scala=*.scala
-lexer.$(file.patterns.scala)=lpeg_scala
 file.patterns.scheme=*.sch;*.scm
 lexer.$(file.patterns.scheme)=lpeg_scheme
 file.patterns.bash=*.bash;*.bashrc;*.bash_profile;*.configure;*.csh;*.sh;*.zsh
@@ -163,6 +162,4 @@ file.patterns.vhdl=*.vh;*.vhd;*.vhdl
 lexer.$(file.patterns.vhdl)=lpeg_vhdl
 file.patterns.vb=*.asa;*.bas;*.cls;*.ctl;*.dob;*.dsm;*.dsr;*.frm;*.pag;*.vb;*.vba;*.vbs
 lexer.$(file.patterns.vb)=lpeg_vb
-file.patterns.xml=*.dtd;*.svg;*.xhtml;*.xml;*.xsd;*.xsl;*.xslt;*.xul
-lexer.$(file.patterns.xml)=lpeg_xml
 # )
