Added Scala to lexers/lpeg.properties.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -78,7 +78,7 @@ file.patterns.gtkrc=*.gtkrc
 lexer.$(file.patterns.gtkrc)=lpeg_gtkrc
 file.patterns.haskell=*.hs
 lexer.$(file.patterns.haskell)=lpeg_haskell
-file.patterns.html=*.htm;*.html;*.shtm;*.shtml
+file.patterns.html=*.htm;*.html;*.shtm;*.shtml;*.xhtml
 lexer.$(file.patterns.html)=lpeg_hypertext
 file.patterns.odl=*.idl;*.odl
 lexer.$(file.patterns.odl)=lpeg_odl
@@ -144,6 +144,8 @@ file.patterns.rb=Rakefile;*.rake;*.rb;*.rbw
 lexer.$(file.patterns.rb)=lpeg_ruby
 file.patterns.ragel=*.rl
 lexer.$(file.patterns.ragel)=lpeg_ragel
+file.patterns.scala=*.scala
+lexer.$(file.patterns.scala)=lpeg_scala
 file.patterns.scheme=*.sch;*.scm
 lexer.$(file.patterns.scheme)=lpeg_scheme
 file.patterns.bash=*.bash;*.bashrc;*.bash_profile;*.configure;*.csh;*.sh;*.zsh
