Detect and use XML lexer; lexers/lpeg.properties

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -164,4 +164,6 @@ file.patterns.vhdl=*.vh;*.vhd;*.vhdl
 lexer.$(file.patterns.vhdl)=lpeg_vhdl
 file.patterns.vb=*.asa;*.bas;*.cls;*.ctl;*.dob;*.dsm;*.dsr;*.frm;*.pag;*.vb;*.vba;*.vbs
 lexer.$(file.patterns.vb)=lpeg_vb
+file.patterns.xml=*.dtd;*.svg;*.xml;*.xsd;*.xsl;*.xslt;*.xul    
+lexer.$(file.patterns.xml)=lpeg_xml
 # )
