--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -2,7 +2,7 @@
 # To use, add 'import lexers/lpeg' to your SciTEGlobal.properties or
 # SciTEUser.properties.
 
-lexer.lpeg.home=$(SciteUserHome)/lexers
+lexer.lpeg.home=$(SciteDefaultHome)/lexers
 lexer.lpeg.color.theme=scite
 fold.by.indentation=0
 fold.line.comments=0
