Added ChucK lexer from Martin Morawetz.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -33,6 +33,8 @@ file.patterns.bibtex=*.bib
 lexer.$(file.patterns.bibtex)=lpeg_bibtex
 file.patterns.boo=*.boo
 lexer.$(file.patterns.boo)=lpeg_boo
+file.patterns.chuck=*.ck
+lexer.$(file.patterns.chuck)=lpeg_chuck
 file.patterns.cpp=*.c;*.cc;*.C;*.cpp;*.cxx;*.c++;*.h;*.hh;*.hpp;*.hxx;*.h++
 lexer.$(file.patterns.cpp)=lpeg_cpp
 file.patterns.csharp=*.cs
