--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -163,8 +163,10 @@ file.patterns.verilog=*.v;*.ver
 lexer.$(file.patterns.verilog)=lpeg_verilog
 file.patterns.vhdl=*.vh;*.vhd;*.vhdl
 lexer.$(file.patterns.vhdl)=lpeg_vhdl
-file.patterns.vb=*.asa;*.bas;*.cls;*.ctl;*.dob;*.dsm;*.dsr;*.frm;*.pag;*.vb;*.vba;*.vbs
+file.patterns.vb=*.asa;*.bas;*.cls;*.ctl;*.dob;*.dsm;*.dsr;*.frm;*.pag;*.vb;*.vba
 lexer.$(file.patterns.vb)=lpeg_vb
+file.patterns.vbs=*.vbs
+lexer.$(file.patterns.vbs)=lpeg_vbscript
 file.patterns.xml=*.dtd;*.svg;*.xml;*.xsd;*.xsl;*.xslt;*.xul    
 lexer.$(file.patterns.xml)=lpeg_xml
 # )
