Fixed bug with Python lexer identification in SciTE; lexers/lpeg.properties Thanks to Pedro Andres Aranda Gutierrez.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -131,8 +131,8 @@ file.patterns.prolog=*.prolog
 lexer.$(file.patterns.prolog)=lpeg_prolog
 file.patterns.props=*.props;*.properties
 lexer.$(file.patterns.props)=lpeg_props
-file.patterns.python=*.sc;*.py;*.pyw
-lexer.$(file.patterns.python)=lpeg_python
+file.patterns.py=*.sc;*.py;*.pyw
+lexer.$(file.patterns.py)=lpeg_python
 file.patterns.r=*.R;*.Rout;*.Rhistory;*.Rt;Rout.save;Rout.fail;*.S
 lexer.$(file.patterns.r)=lpeg_rstats
 file.patterns.rebol=*.r;*.reb
@@ -167,6 +167,6 @@ file.patterns.vb=*.asa;*.bas;*.cls;*.ctl;*.dob;*.dsm;*.dsr;*.frm;*.pag;*.vb;*.vb
 lexer.$(file.patterns.vb)=lpeg_vb
 file.patterns.vbs=*.vbs
 lexer.$(file.patterns.vbs)=lpeg_vbscript
-file.patterns.xml=*.dtd;*.svg;*.xml;*.xsd;*.xsl;*.xslt;*.xul    
+file.patterns.xml=*.dtd;*.svg;*.xml;*.xsd;*.xsl;*.xslt;*.xul
 lexer.$(file.patterns.xml)=lpeg_xml
 # )
