Identify more file extensions from Jeff Stone; lexers/lpeg.properties

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -23,7 +23,7 @@ file.patterns.apdl=*.ans;*.inp;*.mac
 lexer.$(file.patterns.apdl)=lpeg_apdl
 file.patterns.applescript=*.applescript
 lexer.$(file.patterns.applescript)=lpeg_applescript
-file.patterns.asp=*.asa;*.asp
+file.patterns.asp=*.asa;*.asp;*.hta
 lexer.$(file.patterns.asp)=lpeg_asp
 file.patterns.awk=*.awk
 lexer.$(file.patterns.awk)=lpeg_awk
@@ -111,7 +111,7 @@ file.patterns.markdown=*.md
 lexer.$(file.patterns.markdown)=lpeg_markdown
 file.patterns.nemerle=*.n
 lexer.$(file.patterns.nemerle)=lpeg_nemerle
-file.patterns.nsis=*.nsh;*.nsi
+file.patterns.nsis=*.nsh;*.nsi;*.nsis
 lexer.$(file.patterns.nsis)=lpeg_nsis
 file.patterns.objective_c=*.m;*.mm;*.objc
 lexer.$(file.patterns.objective_c)=lpeg_objective_c
