Updated lexer identification.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -33,12 +33,12 @@ file.patterns.bibtex=*.bib
 lexer.$(file.patterns.bibtex)=lpeg_bibtex
 file.patterns.boo=*.boo
 lexer.$(file.patterns.boo)=lpeg_boo
-file.patterns.chuck=*.ck
-lexer.$(file.patterns.chuck)=lpeg_chuck
 file.patterns.cpp=*.c;*.cc;*.C;*.cpp;*.cxx;*.c++;*.h;*.hh;*.hpp;*.hxx;*.h++
 lexer.$(file.patterns.cpp)=lpeg_cpp
 file.patterns.csharp=*.cs
 lexer.$(file.patterns.csharp)=lpeg_csharp
+file.patterns.chuck=*.ck
+lexer.$(file.patterns.chuck)=lpeg_chuck
 file.patterns.cmake=*.cmake;*.cmake.in;*.ctest;*.ctest.in
 lexer.$(file.patterns.cmake)=lpeg_cmake
 file.patterns.coffeescript=*.coffee
@@ -99,10 +99,14 @@ file.patterns.json=*.json
 lexer.$(file.patterns.json)=lpeg_json
 file.patterns.latex=*.bbl;*.dtx;*.ins;*.ltx;*.tex;*.sty
 lexer.$(file.patterns.latex)=lpeg_latex
+file.patterns.less=*.less
+lexer.$(file.patterns.less)=lpeg_less
 file.patterns.lilypond=*.lily;*.ly
 lexer.$(file.patterns.lilypond)=lpeg_lilypond
 file.patterns.lisp=*.cl;*.el;*.lisp;*.lsp
 lexer.$(file.patterns.lisp)=lpeg_lisp
+file.patterns.litcoffee=*.litcoffee
+lexer.$(file.patterns.litcoffee)=lpeg_litcoffee
 file.patterns.lua=*.lua
 lexer.$(file.patterns.lua)=lpeg_lua
 file.patterns.makefile=GNUmakefile;*.iface;*.mak;makefile;Makefile
@@ -145,6 +149,8 @@ file.patterns.rb=Rakefile;*.rake;*.rb;*.rbw
 lexer.$(file.patterns.rb)=lpeg_ruby
 file.patterns.ragel=*.rl
 lexer.$(file.patterns.ragel)=lpeg_ragel
+file.patterns.sass=*.sass;*.scss
+lexer.$(file.patterns.sass)=lpeg_sass
 file.patterns.scala=*.scala
 lexer.$(file.patterns.scala)=lpeg_scala
 file.patterns.scheme=*.sch;*.scm
@@ -163,10 +169,8 @@ file.patterns.verilog=*.v;*.ver
 lexer.$(file.patterns.verilog)=lpeg_verilog
 file.patterns.vhdl=*.vh;*.vhd;*.vhdl
 lexer.$(file.patterns.vhdl)=lpeg_vhdl
-file.patterns.vb=*.asa;*.bas;*.cls;*.ctl;*.dob;*.dsm;*.dsr;*.frm;*.pag;*.vb;*.vba
+file.patterns.vb=*.asa;*.bas;*.cls;*.ctl;*.dob;*.dsm;*.dsr;*.frm;*.pag;*.vb;*.vba;*.vbs
 lexer.$(file.patterns.vb)=lpeg_vb
-file.patterns.vbs=*.vbs
-lexer.$(file.patterns.vbs)=lpeg_vbscript
 file.patterns.xml=*.dtd;*.svg;*.xml;*.xsd;*.xsl;*.xslt;*.xul
 lexer.$(file.patterns.xml)=lpeg_xml
 # )
