Separated C/C++ lexer into ANSI C and C++ lexers.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -33,7 +33,9 @@ file.patterns.bibtex=*.bib
 lexer.$(file.patterns.bibtex)=lpeg_bibtex
 file.patterns.boo=*.boo
 lexer.$(file.patterns.boo)=lpeg_boo
-file.patterns.cpp=*.c;*.cc;*.C;*.cpp;*.cxx;*.c++;*.h;*.hh;*.hpp;*.hxx;*.h++
+file.patterns.c=*.c;*.cc;*.C
+lexer.$(file.patterns.c)=lpeg_ansi_c
+file.patterns.cpp=*.cpp;*.cxx;*.c++;*.h;*.hh;*.hpp;*.hxx;*.h++
 lexer.$(file.patterns.cpp)=lpeg_cpp
 file.patterns.csharp=*.cs
 lexer.$(file.patterns.csharp)=lpeg_csharp
