--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -82,7 +82,7 @@ lexer.$(file.patterns.gtkrc)=lpeg_gtkrc
 file.patterns.haskell=*.hs
 lexer.$(file.patterns.haskell)=lpeg_haskell
 file.patterns.html=*.htm;*.html;*.shtm;*.shtml;*.xhtml
-lexer.$(file.patterns.html)=lpeg_hypertext
+lexer.$(file.patterns.html)=lpeg_html
 file.patterns.odl=*.idl;*.odl
 lexer.$(file.patterns.odl)=lpeg_odl
 file.patterns.inform=*.inf
@@ -90,7 +90,7 @@ lexer.$(file.patterns.inform)=lpeg_inform
 file.patterns.ini=*.cfg;*.cnf;*.inf;*.ini;*.reg
 lexer.$(file.patterns.ini)=lpeg_ini
 file.patterns.Io=*.io
-lexer.$(file.patterns.Io)=lpeg_Io
+lexer.$(file.patterns.Io)=lpeg_io_lang
 file.patterns.java=*.bsh;*.java
 lexer.$(file.patterns.java)=lpeg_java
 file.patterns.js=*.js;*.jsfl
