Updated file extensions and lexer associations.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -15,14 +15,16 @@ lexer.*.lpeg=lpeg
 # Lexer definitions (
 file.patterns.flash=*.as;*.asc
 lexer.$(file.patterns.flash)=lpeg_actionscript
-file.patterns.ada=*.ada;*.adb;*.ads
+file.patterns.ada=*.adb;*.ads
 lexer.$(file.patterns.ada)=lpeg_ada
-file.patterns.antlr=*.g
+file.patterns.antlr=*.g;*.g4
 lexer.$(file.patterns.antlr)=lpeg_antlr
 file.patterns.apdl=*.ans;*.inp;*.mac
 lexer.$(file.patterns.apdl)=lpeg_apdl
 file.patterns.applescript=*.applescript
 lexer.$(file.patterns.applescript)=lpeg_applescript
+file.patterns.asm=*.asm;*.ASM;*.s;*.S
+lexer.$(file.patterns.asm)=lpeg_asm
 file.patterns.asp=*.asa;*.asp;*.hta
 lexer.$(file.patterns.asp)=lpeg_asp
 file.patterns.awk=*.awk
@@ -33,12 +35,12 @@ file.patterns.bibtex=*.bib
 lexer.$(file.patterns.bibtex)=lpeg_bibtex
 file.patterns.boo=*.boo
 lexer.$(file.patterns.boo)=lpeg_boo
+file.patterns.csharp=*.cs
+lexer.$(file.patterns.csharp)=lpeg_csharp
 file.patterns.c=*.c;*.cc;*.C
 lexer.$(file.patterns.c)=lpeg_ansi_c
 file.patterns.cpp=*.cpp;*.cxx;*.c++;*.h;*.hh;*.hpp;*.hxx;*.h++
 lexer.$(file.patterns.cpp)=lpeg_cpp
-file.patterns.csharp=*.cs
-lexer.$(file.patterns.csharp)=lpeg_csharp
 file.patterns.chuck=*.ck
 lexer.$(file.patterns.chuck)=lpeg_chuck
 file.patterns.cmake=*.cmake;*.cmake.in;*.ctest;*.ctest.in
@@ -51,6 +53,8 @@ file.patterns.cuda=*.cu;*.cuh
 lexer.$(file.patterns.cuda)=lpeg_cuda
 file.patterns.d=*.d;*.di
 lexer.$(file.patterns.d)=lpeg_dmd
+file.patterns.dart=*.dart
+lexer.$(file.patterns.dart)=lpeg_dart
 file.patterns.desktop=*.desktop
 lexer.$(file.patterns.desktop)=lpeg_desktop
 file.patterns.diff=*.diff;*.patch
@@ -63,9 +67,9 @@ file.patterns.erlang=*.erl;*.hrl
 lexer.$(file.patterns.erlang)=lpeg_erlang
 file.patterns.fsharp=*.fs
 lexer.$(file.patterns.fsharp)=lpeg_fsharp
-file.patterns.forth=*.f;*.forth;*.frt;*.fs
+file.patterns.forth=*.forth;*.frt;*.fs
 lexer.$(file.patterns.forth)=lpeg_forth
-file.patterns.fortran=*.for;*.fort;*.fpp;*.f77;*.f90;*.f95;*.f03;*.f08
+file.patterns.fortran=*.f;*.for;*.ftn;*.fpp;*.f77;*.f90;*.f95;*.f03;*.f08
 lexer.$(file.patterns.fortran)=lpeg_fortran
 file.patterns.gap=*.g;*.gd;*.gi;*.gap
 lexer.$(file.patterns.gap)=lpeg_gap
@@ -75,6 +79,8 @@ file.patterns.glsl=*.glslf;*.glslv
 lexer.$(file.patterns.glsl)=lpeg_glsl
 file.patterns.gnuplot=*.dem;*.plt
 lexer.$(file.patterns.gnuplot)=lpeg_gnuplot
+file.patterns.go=*.go
+lexer.$(file.patterns.go)=lpeg_go
 file.patterns.groovy=*.groovy;*.gvy
 lexer.$(file.patterns.groovy)=lpeg_groovy
 file.patterns.gtkrc=*.gtkrc
@@ -83,22 +89,22 @@ file.patterns.haskell=*.hs
 lexer.$(file.patterns.haskell)=lpeg_haskell
 file.patterns.html=*.htm;*.html;*.shtm;*.shtml;*.xhtml
 lexer.$(file.patterns.html)=lpeg_html
-file.patterns.odl=*.idl;*.odl
-lexer.$(file.patterns.odl)=lpeg_odl
-file.patterns.inform=*.inf
+file.patterns.idl=*.idl;*.odl
+lexer.$(file.patterns.idl)=lpeg_idl
+file.patterns.inform=*.inf;*.ni
 lexer.$(file.patterns.inform)=lpeg_inform
 file.patterns.ini=*.cfg;*.cnf;*.inf;*.ini;*.reg
 lexer.$(file.patterns.ini)=lpeg_ini
-file.patterns.Io=*.io
-lexer.$(file.patterns.Io)=lpeg_io_lang
+file.patterns.io_lang=*.io
+lexer.$(file.patterns.io_lang)=lpeg_io_lang
 file.patterns.java=*.bsh;*.java
 lexer.$(file.patterns.java)=lpeg_java
 file.patterns.js=*.js;*.jsfl
 lexer.$(file.patterns.js)=lpeg_javascript
-file.patterns.jsp=*.jsp
-lexer.$(file.patterns.jsp)=lpeg_jsp
 file.patterns.json=*.json
 lexer.$(file.patterns.json)=lpeg_json
+file.patterns.jsp=*.jsp
+lexer.$(file.patterns.jsp)=lpeg_jsp
 file.patterns.latex=*.bbl;*.dtx;*.ins;*.ltx;*.tex;*.sty
 lexer.$(file.patterns.latex)=lpeg_latex
 file.patterns.less=*.less
@@ -117,6 +123,8 @@ file.patterns.markdown=*.md
 lexer.$(file.patterns.markdown)=lpeg_markdown
 file.patterns.nemerle=*.n
 lexer.$(file.patterns.nemerle)=lpeg_nemerle
+file.patterns.nimrod=*.nim
+lexer.$(file.patterns.nimrod)=lpeg_nimrod
 file.patterns.nsis=*.nsh;*.nsi;*.nsis
 lexer.$(file.patterns.nsis)=lpeg_nsis
 file.patterns.objective_c=*.m;*.mm;*.objc
@@ -131,6 +139,8 @@ file.patterns.php=*.inc;*.php;*.php3;*.php4;*.phtml
 lexer.$(file.patterns.php)=lpeg_php
 file.patterns.pike=*.pike;*.pmod
 lexer.$(file.patterns.pike)=lpeg_pike
+file.patterns.pkgbuild=*.PKGBUILD
+lexer.$(file.patterns.pkgbuild)=lpeg_pkgbuild
 file.patterns.ps=*.eps;*.ps
 lexer.$(file.patterns.ps)=lpeg_ps
 file.patterns.prolog=*.prolog
@@ -149,8 +159,6 @@ file.patterns.rhtml=*.erb;*.rhtml
 lexer.$(file.patterns.rhtml)=lpeg_rhtml
 file.patterns.rb=Rakefile;*.rake;*.rb;*.rbw
 lexer.$(file.patterns.rb)=lpeg_ruby
-file.patterns.ragel=*.rl
-lexer.$(file.patterns.ragel)=lpeg_ragel
 file.patterns.sass=*.sass;*.scss
 lexer.$(file.patterns.sass)=lpeg_sass
 file.patterns.scala=*.scala
