--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -153,6 +153,8 @@ file.patterns.r=*.R;*.Rout;*.Rhistory;*.Rt;Rout.save;Rout.fail;*.S
 lexer.$(file.patterns.r)=lpeg_rstats
 file.patterns.rebol=*.r;*.reb
 lexer.$(file.patterns.rebol)=lpeg_rebol
+file.patterns.rest=*.rst
+lexer.$(file.patterns.rest)=lpeg_rest
 file.patterns.rexx=*.orx;*.rex
 lexer.$(file.patterns.rexx)=lpeg_rexx
 file.patterns.rhtml=*.erb;*.rhtml
@@ -183,4 +185,6 @@ file.patterns.vb=*.asa;*.bas;*.cls;*.ctl;*.dob;*.dsm;*.dsr;*.frm;*.pag;*.vb;*.vb
 lexer.$(file.patterns.vb)=lpeg_vb
 file.patterns.xml=*.dtd;*.svg;*.xml;*.xsd;*.xsl;*.xslt;*.xul
 lexer.$(file.patterns.xml)=lpeg_xml
+file.patterns.yaml=*.yaml
+lexer.$(file.patterns.yaml)=lpeg_yaml
 # )
