Added Xtend lexer. Thanks to Piotr Orzechowski.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -185,6 +185,8 @@ file.patterns.vb=*.asa;*.bas;*.cls;*.ctl;*.dob;*.dsm;*.dsr;*.frm;*.pag;*.vb;*.vb
 lexer.$(file.patterns.vb)=lpeg_vb
 file.patterns.xml=*.dtd;*.svg;*.xml;*.xsd;*.xsl;*.xslt;*.xul
 lexer.$(file.patterns.xml)=lpeg_xml
+file.patterns.xtend=*.xtend
+lexer.$(file.patterns.xtend)=lpeg_xtend
 file.patterns.yaml=*.yaml
 lexer.$(file.patterns.yaml)=lpeg_yaml
 # )
