Added vCard lexer from Piotr Orzechowski.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -177,6 +177,8 @@ file.patterns.tcl=*.tcl;*.tk
 lexer.$(file.patterns.tcl)=lpeg_tcl
 file.patterns.vala=*.vala
 lexer.$(file.patterns.vala)=lpeg_vala
+file.patterns.vcard=*.vcf;*.vcard
+lexer.$(file.patterns.vcard)=lpeg_vcard
 file.patterns.verilog=*.v;*.ver
 lexer.$(file.patterns.verilog)=lpeg_verilog
 file.patterns.vhdl=*.vh;*.vhd;*.vhdl
