Added file pattern for Texinfo; lexers/lpeg.properties

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -175,6 +175,8 @@ file.patterns.sql=*.ddl;*.sql
 lexer.$(file.patterns.sql)=lpeg_sql
 file.patterns.tcl=*.tcl;*.tk
 lexer.$(file.patterns.tcl)=lpeg_tcl
+file.patterns.texinfo=*.texi
+lexer.$(file.patterns.texinfo)=lpeg_texinfo
 file.patterns.vala=*.vala
 lexer.$(file.patterns.vala)=lpeg_vala
 file.patterns.vcard=*.vcf;*.vcard
