Added Fish lexer. Thanks to Jason Schindler.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -65,6 +65,8 @@ file.patterns.eiffel=*.e;*.eif
 lexer.$(file.patterns.eiffel)=lpeg_eiffel
 file.patterns.erlang=*.erl;*.hrl
 lexer.$(file.patterns.erlang)=lpeg_erlang
+file.patterns.fish=*.fish
+lexer.$(file.patterns.fish)=lpeg_fish
 file.patterns.fsharp=*.fs
 lexer.$(file.patterns.fsharp)=lpeg_fsharp
 file.patterns.forth=*.forth;*.frt;*.fs
