Nimrod is now Nim.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -125,8 +125,8 @@ file.patterns.markdown=*.md
 lexer.$(file.patterns.markdown)=lpeg_markdown
 file.patterns.nemerle=*.n
 lexer.$(file.patterns.nemerle)=lpeg_nemerle
-file.patterns.nimrod=*.nim
-lexer.$(file.patterns.nimrod)=lpeg_nimrod
+file.patterns.nim=*.nim
+lexer.$(file.patterns.nim)=lpeg_nim
 file.patterns.nsis=*.nsh;*.nsi;*.nsis
 lexer.$(file.patterns.nsis)=lpeg_nsis
 file.patterns.objective_c=*.m;*.mm;*.objc
