--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -65,10 +65,10 @@ file.patterns.eiffel=*.e;*.eif
 lexer.$(file.patterns.eiffel)=lpeg_eiffel
 file.patterns.erlang=*.erl;*.hrl
 lexer.$(file.patterns.erlang)=lpeg_erlang
-file.patterns.fish=*.fish
-lexer.$(file.patterns.fish)=lpeg_fish
 file.patterns.fsharp=*.fs
 lexer.$(file.patterns.fsharp)=lpeg_fsharp
+file.patterns.fish=*.fish
+lexer.$(file.patterns.fish)=lpeg_fish
 file.patterns.forth=*.forth;*.frt;*.fs
 lexer.$(file.patterns.forth)=lpeg_forth
 file.patterns.fortran=*.f;*.for;*.ftn;*.fpp;*.f77;*.f90;*.f95;*.f03;*.f08
@@ -163,6 +163,8 @@ file.patterns.rhtml=*.erb;*.rhtml
 lexer.$(file.patterns.rhtml)=lpeg_rhtml
 file.patterns.rb=Rakefile;*.rake;*.rb;*.rbw
 lexer.$(file.patterns.rb)=lpeg_ruby
+file.patterns.rust=*.rs
+lexer.$(file.patterns.rust)=lpeg_rust
 file.patterns.sass=*.sass;*.scss
 lexer.$(file.patterns.sass)=lpeg_sass
 file.patterns.scala=*.scala
@@ -179,6 +181,8 @@ file.patterns.tcl=*.tcl;*.tk
 lexer.$(file.patterns.tcl)=lpeg_tcl
 file.patterns.texinfo=*.texi
 lexer.$(file.patterns.texinfo)=lpeg_texinfo
+file.patterns.toml=*.toml
+lexer.$(file.patterns.toml)=lpeg_toml
 file.patterns.vala=*.vala
 lexer.$(file.patterns.vala)=lpeg_vala
 file.patterns.vcard=*.vcf;*.vcard
