Added PowerShell lexer. Thanks to Jeff Stone.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -143,6 +143,8 @@ file.patterns.pike=*.pike;*.pmod
 lexer.$(file.patterns.pike)=lpeg_pike
 file.patterns.pkgbuild=*.PKGBUILD
 lexer.$(file.patterns.pkgbuild)=lpeg_pkgbuild
+file.patterns.powershell=*.ps1
+lexer.$(file.patterns.powershell)=lpeg_powershell
 file.patterns.ps=*.eps;*.ps
 lexer.$(file.patterns.ps)=lpeg_ps
 file.patterns.prolog=*.prolog
