--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -63,6 +63,8 @@ file.patterns.dot=*.dot
 lexer.$(file.patterns.dot)=lpeg_dot
 file.patterns.eiffel=*.e;*.eif
 lexer.$(file.patterns.eiffel)=lpeg_eiffel
+file.patterns.elixir=*.ex;*.exs
+lexer.$(file.patterns.elixir)=lpeg_elixir
 file.patterns.erlang=*.erl;*.hrl
 lexer.$(file.patterns.erlang)=lpeg_erlang
 file.patterns.fsharp=*.fs
