Added Windows Script File lexer. Thanks to Jeff Stone.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -197,6 +197,8 @@ file.patterns.vhdl=*.vh;*.vhd;*.vhdl
 lexer.$(file.patterns.vhdl)=lpeg_vhdl
 file.patterns.vb=*.asa;*.bas;*.cls;*.ctl;*.dob;*.dsm;*.dsr;*.frm;*.pag;*.vb;*.vba;*.vbs
 lexer.$(file.patterns.vb)=lpeg_vb
+file.patterns.wsf=*.wsf
+lexer.$(file.patterns.wsf)=lpeg_wsf
 file.patterns.xml=*.dtd;*.svg;*.xml;*.xsd;*.xsl;*.xslt;*.xul
 lexer.$(file.patterns.xml)=lpeg_xml
 file.patterns.xtend=*.xtend
