--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -79,6 +79,8 @@ file.patterns.gap=*.g;*.gd;*.gi;*.gap
 lexer.$(file.patterns.gap)=lpeg_gap
 file.patterns.gettext=*.po;*.pot
 lexer.$(file.patterns.gettext)=lpeg_gettext
+file.patterns.gherkin=*.feature
+lexer.$(file.patterns.gherkin)=lpeg_gherkin
 file.patterns.glsl=*.glslf;*.glslv
 lexer.$(file.patterns.glsl)=lpeg_glsl
 file.patterns.gnuplot=*.dem;*.plt
