--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -181,6 +181,8 @@ file.patterns.bash=*.bash;*.bashrc;*.bash_profile;*.configure;*.csh;*.sh;*.zsh
 lexer.$(file.patterns.bash)=lpeg_bash
 file.patterns.smalltalk=*.changes;*.st;*.sources
 lexer.$(file.patterns.smalltalk)=lpeg_smalltalk
+file.patterns.snobol4=*.sno;*.SNO
+lexer.$(file.patterns.snobol4)=lpeg_snobol4
 file.patterns.sql=*.ddl;*.sql
 lexer.$(file.patterns.sql)=lpeg_sql
 file.patterns.tcl=*.tcl;*.tk
