Added Icon lexer. Thanks to Carl Sturtivant.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -95,6 +95,8 @@ file.patterns.haskell=*.hs
 lexer.$(file.patterns.haskell)=lpeg_haskell
 file.patterns.html=*.htm;*.html;*.shtm;*.shtml;*.xhtml
 lexer.$(file.patterns.html)=lpeg_html
+file.patterns.icon=*.icn
+lexer.$(file.patterns.icon)=lpeg_icon
 file.patterns.idl=*.idl;*.odl
 lexer.$(file.patterns.idl)=lpeg_idl
 file.patterns.inform=*.inf;*.ni
