Added AutoIt lexer. Thanks to Jeff Stone.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -27,6 +27,8 @@ file.patterns.asm=*.asm;*.ASM;*.s;*.S
 lexer.$(file.patterns.asm)=lpeg_asm
 file.patterns.asp=*.asa;*.asp;*.hta
 lexer.$(file.patterns.asp)=lpeg_asp
+file.patterns.autoit=*.au3;*.a3x
+lexer.$(file.patterns.autoit)=lpeg_autoit
 file.patterns.awk=*.awk
 lexer.$(file.patterns.awk)=lpeg_awk
 file.patterns.batch=*.bat;*.cmd
@@ -149,10 +151,10 @@ file.patterns.pike=*.pike;*.pmod
 lexer.$(file.patterns.pike)=lpeg_pike
 file.patterns.pkgbuild=*.PKGBUILD
 lexer.$(file.patterns.pkgbuild)=lpeg_pkgbuild
-file.patterns.powershell=*.ps1
-lexer.$(file.patterns.powershell)=lpeg_powershell
 file.patterns.ps=*.eps;*.ps
 lexer.$(file.patterns.ps)=lpeg_ps
+file.patterns.powershell=*.ps1
+lexer.$(file.patterns.powershell)=lpeg_powershell
 file.patterns.prolog=*.prolog
 lexer.$(file.patterns.prolog)=lpeg_prolog
 file.patterns.props=*.props;*.properties
