Added APL, Faust, Ledger, man/roff, and Pure lexers. Thanks to David B. Lamkins and Marc André Tanner.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -21,6 +21,8 @@ file.patterns.antlr=*.g;*.g4
 lexer.$(file.patterns.antlr)=lpeg_antlr
 file.patterns.apdl=*.ans;*.inp;*.mac
 lexer.$(file.patterns.apdl)=lpeg_apdl
+file.patterns.apl=*.apl
+lexer.$(file.patterns.apl)=lpeg_apl
 file.patterns.applescript=*.applescript
 lexer.$(file.patterns.applescript)=lpeg_applescript
 file.patterns.asm=*.asm;*.ASM;*.s;*.S
@@ -71,6 +73,8 @@ file.patterns.erlang=*.erl;*.hrl
 lexer.$(file.patterns.erlang)=lpeg_erlang
 file.patterns.fsharp=*.fs
 lexer.$(file.patterns.fsharp)=lpeg_fsharp
+file.patterns.faust=*.dsp
+lexer.$(file.patterns.faust)=lpeg_faust
 file.patterns.fish=*.fish
 lexer.$(file.patterns.fish)=lpeg_fish
 file.patterns.forth=*.forth;*.frt;*.fs
@@ -117,6 +121,8 @@ file.patterns.jsp=*.jsp
 lexer.$(file.patterns.jsp)=lpeg_jsp
 file.patterns.latex=*.bbl;*.dtx;*.ins;*.ltx;*.tex;*.sty
 lexer.$(file.patterns.latex)=lpeg_latex
+file.patterns.ledger=*.ledger;*.journal
+lexer.$(file.patterns.ledger)=lpeg_ledger
 file.patterns.less=*.less
 lexer.$(file.patterns.less)=lpeg_less
 file.patterns.lilypond=*.lily;*.ly
@@ -129,6 +135,8 @@ file.patterns.lua=*.lua
 lexer.$(file.patterns.lua)=lpeg_lua
 file.patterns.makefile=GNUmakefile;*.iface;*.mak;makefile;Makefile
 lexer.$(file.patterns.makefile)=lpeg_makefile
+file.patterns.man=*.1;*.2;*.3;*.4;*.5;*.6;*.7;*.8;*.9;*.1x;*.2x;*.3x;*.4x;*.5x;*.6x;*.7x;*.8x;*.9x
+lexer.$(file.patterns.man)=lpeg_man
 file.patterns.markdown=*.md
 lexer.$(file.patterns.markdown)=lpeg_markdown
 file.patterns.nemerle=*.n
@@ -159,6 +167,8 @@ file.patterns.prolog=*.prolog
 lexer.$(file.patterns.prolog)=lpeg_prolog
 file.patterns.props=*.props;*.properties
 lexer.$(file.patterns.props)=lpeg_props
+file.patterns.pure=*.pure
+lexer.$(file.patterns.pure)=lpeg_pure
 file.patterns.py=*.sc;*.py;*.pyw
 lexer.$(file.patterns.py)=lpeg_python
 file.patterns.r=*.R;*.Rout;*.Rhistory;*.Rt;Rout.save;Rout.fail;*.S
