Added Dockerfile and MoonScript lexers and updated Rust and TOML lexers. Thanks to Alejandro Baez.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -63,6 +63,8 @@ file.patterns.desktop=*.desktop
 lexer.$(file.patterns.desktop)=lpeg_desktop
 file.patterns.diff=*.diff;*.patch
 lexer.$(file.patterns.diff)=lpeg_diff
+file.patterns.dockerfile=Dockerfile
+lexer.$(file.patterns.dockerfile)=lpeg_dockerfile
 file.patterns.dot=*.dot
 lexer.$(file.patterns.dot)=lpeg_dot
 file.patterns.eiffel=*.e;*.eif
@@ -139,6 +141,8 @@ file.patterns.man=*.1;*.2;*.3;*.4;*.5;*.6;*.7;*.8;*.9;*.1x;*.2x;*.3x;*.4x;*.5x;*
 lexer.$(file.patterns.man)=lpeg_man
 file.patterns.markdown=*.md
 lexer.$(file.patterns.markdown)=lpeg_markdown
+file.patterns.moon=*.moon
+lexer.$(file.patterns.moon)=lpeg_moon
 file.patterns.nemerle=*.n
 lexer.$(file.patterns.nemerle)=lpeg_nemerle
 file.patterns.nim=*.nim
