Added PICO-8 lexer. Thanks to Alejandro Baez.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -159,6 +159,8 @@ file.patterns.perl=*.al;*.perl;*.pl;*.pm;*.pod
 lexer.$(file.patterns.perl)=lpeg_perl
 file.patterns.php=*.inc;*.php;*.php3;*.php4;*.phtml
 lexer.$(file.patterns.php)=lpeg_php
+file.patterns.pico=*.p8
+lexer.$(file.patterns.pico)=lpeg_pico
 file.patterns.pike=*.pike;*.pmod
 lexer.$(file.patterns.pike)=lpeg_pike
 file.patterns.pkgbuild=*.PKGBUILD
