Added TaskPaper lexer. Thanks to Larry Hynes.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -205,6 +205,8 @@ file.patterns.snobol4=*.sno;*.SNO
 lexer.$(file.patterns.snobol4)=lpeg_snobol4
 file.patterns.sql=*.ddl;*.sql
 lexer.$(file.patterns.sql)=lpeg_sql
+file.patterns.taskpaper=*.taskpaper
+lexer.$(file.patterns.taskpaper)=lpeg_taskpaper
 file.patterns.tcl=*.tcl;*.tk
 lexer.$(file.patterns.tcl)=lpeg_tcl
 file.patterns.texinfo=*.texi
