Added Protobuf and Crystal languages and updated PKGBUILD. Thanks to David B. Lamkins, Michel Martens, and Christian Hesse, respectively.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -51,6 +51,8 @@ file.patterns.cmake=*.cmake;*.cmake.in;*.ctest;*.ctest.in
 lexer.$(file.patterns.cmake)=lpeg_cmake
 file.patterns.coffeescript=*.coffee
 lexer.$(file.patterns.coffeescript)=lpeg_coffeescript
+file.patterns.crystal=*.cr
+lexer.$(file.patterns.crystal)=lpeg_crystal
 file.patterns.css=*.css
 lexer.$(file.patterns.css)=lpeg_css
 file.patterns.cuda=*.cu;*.cuh
@@ -173,6 +175,8 @@ file.patterns.prolog=*.prolog
 lexer.$(file.patterns.prolog)=lpeg_prolog
 file.patterns.props=*.props;*.properties
 lexer.$(file.patterns.props)=lpeg_props
+file.patterns.protobuf=*.proto
+lexer.$(file.patterns.protobuf)=lpeg_protobuf
 file.patterns.pure=*.pure
 lexer.$(file.patterns.pure)=lpeg_pure
 file.patterns.py=*.sc;*.py;*.pyw
