Added rc and Standard ML lexers, and updated C and Scheme lexers.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -205,6 +205,8 @@ file.patterns.bash=*.bash;*.bashrc;*.bash_profile;*.configure;*.csh;*.sh;*.zsh
 lexer.$(file.patterns.bash)=lpeg_bash
 file.patterns.smalltalk=*.changes;*.st;*.sources
 lexer.$(file.patterns.smalltalk)=lpeg_smalltalk
+file.patterns.sml=*.sml;*.fun;*.sig
+lexer.$(file.patterns.sml)=lpeg_sml
 file.patterns.snobol4=*.sno;*.SNO
 lexer.$(file.patterns.snobol4)=lpeg_snobol4
 file.patterns.sql=*.ddl;*.sql
