Added Logtalk lexer. Thanks to Michael T. Richter.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -135,6 +135,8 @@ file.patterns.lisp=*.cl;*.el;*.lisp;*.lsp
 lexer.$(file.patterns.lisp)=lpeg_lisp
 file.patterns.litcoffee=*.litcoffee
 lexer.$(file.patterns.litcoffee)=lpeg_litcoffee
+file.patterns.logtalk=*.lgt
+lexer.$(file.patterns.logtalk)=lpeg_logtalk
 file.patterns.lua=*.lua
 lexer.$(file.patterns.lua)=lpeg_lua
 file.patterns.makefile=GNUmakefile;*.iface;*.mak;makefile;Makefile
