Fixed Moonscript association; lexers/lpeg.properties

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -145,8 +145,8 @@ file.patterns.man=*.1;*.2;*.3;*.4;*.5;*.6;*.7;*.8;*.9;*.1x;*.2x;*.3x;*.4x;*.5x;*
 lexer.$(file.patterns.man)=lpeg_man
 file.patterns.markdown=*.md
 lexer.$(file.patterns.markdown)=lpeg_markdown
-file.patterns.moon=*.moon
-lexer.$(file.patterns.moon)=lpeg_moon
+file.patterns.moonscript=*.moon
+lexer.$(file.patterns.moonscript)=lpeg_moonscript
 file.patterns.nemerle=*.n
 lexer.$(file.patterns.nemerle)=lpeg_nemerle
 file.patterns.nim=*.nim
