Added Myrddin lexer. Thanks to Michael Forney.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -147,6 +147,8 @@ file.patterns.markdown=*.md
 lexer.$(file.patterns.markdown)=lpeg_markdown
 file.patterns.moonscript=*.moon
 lexer.$(file.patterns.moonscript)=lpeg_moonscript
+file.patterns.myrddin=*.myr
+lexer.$(file.patterns.myrddin)=lpeg_myrddin
 file.patterns.nemerle=*.n
 lexer.$(file.patterns.nemerle)=lpeg_nemerle
 file.patterns.nim=*.nim
