Updated Forth lexer and file extensions. Thanks to Joseph Eib.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -81,7 +81,7 @@ file.patterns.faust=*.dsp
 lexer.$(file.patterns.faust)=lpeg_faust
 file.patterns.fish=*.fish
 lexer.$(file.patterns.fish)=lpeg_fish
-file.patterns.forth=*.forth;*.frt;*.fs
+file.patterns.forth=*.forth;*.frt;*.fs;*.fth
 lexer.$(file.patterns.forth)=lpeg_forth
 file.patterns.fortran=*.f;*.for;*.ftn;*.fpp;*.f77;*.f90;*.f95;*.f03;*.f08
 lexer.$(file.patterns.fortran)=lpeg_fortran
