Initial updates to be compatible with Scintilla 4.x and SciTE 5.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -2,15 +2,14 @@
 # To use, add 'import lexers/lpeg' to your SciTEGlobal.properties or
 # SciTEUser.properties.
 
-lexer.lpeg.home=$(SciteDefaultHome)/lexers
-lexer.lpeg.color.theme=scite
+lexilla.context.lpeg.home=$(SciteDefaultHome)/lexers
+lexilla.context.lpeg.color.theme=scite
+if PLAT_WIN
+  lexilla.path=$(lexilla.context.lpeg.home)/LexLPeg.dll
+if PLAT_GTK
+  lexilla.path=$(lexilla.context.lpeg.home)/liblexlpeg.so
 fold.by.indentation=0
 fold.line.comments=0
-if PLAT_WIN
-	lexerpath.*.lpeg=$(lexer.lpeg.home)/LexLPeg.dll
-if PLAT_GTK
-	lexerpath.*.lpeg=$(lexer.lpeg.home)/liblexlpeg.so
-lexer.*.lpeg=lpeg
 
 # Lexer definitions (
 file.patterns.flash=*.as;*.asc
