Rewrote manual and updated documentation all around.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -5,11 +5,12 @@
 lexilla.context.lpeg.home=$(SciteDefaultHome)/lexers
 lexilla.context.lpeg.color.theme=scite
 if PLAT_WIN
-  lexilla.path=$(lexilla.context.lpeg.home)/LexLPeg.dll
+  lexilla.path=.;$(lexilla.context.lpeg.home)/LexLPeg.dll
 if PLAT_GTK
-  lexilla.path=$(lexilla.context.lpeg.home)/liblexlpeg.so
+  lexilla.path=.;$(lexilla.context.lpeg.home)/liblexlpeg.so
 fold.by.indentation=0
-fold.line.comments=0
+fold.line.groups=0
+fold.on.zero.sum.lines=0
 
 # Lexer definitions (
 file.patterns.flash=*.as;*.asc
