Added jq lexer. Thanks to anonymous.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -119,6 +119,8 @@ file.patterns.java=*.bsh;*.java
 lexer.$(file.patterns.java)=lpeg_java
 file.patterns.js=*.js;*.jsfl
 lexer.$(file.patterns.js)=lpeg_javascript
+file.patterns.jq=*.jq
+lexer.$(file.patterns.jq)=lpeg_jq
 file.patterns.json=*.json
 lexer.$(file.patterns.json)=lpeg_json
 file.patterns.jsp=*.jsp
