--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -90,8 +90,8 @@ jobs:
                 exit 0
               fi
             elif [[ $echoing -eq 1 ]]; then
-              echo "$line" | grep -v '\(\[Scintillua\|Download:\)' |
-                sed "s,\(manual\|api\)\.html,$prefix/\0,;" || continue
+              echo "$line" | sed "s,\(manual\|api\)\.html,$prefix/\0,;" || \
+                continue
             fi
           done < docs/changelog.md >> log.md
       - name: Create release
