Removed superfluous "continue" left in previous GitHub workflow commit.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -90,8 +90,7 @@ jobs:
                 exit 0
               fi
             elif [[ $echoing -eq 1 ]]; then
-              echo "$line" | sed "s,\(manual\|api\)\.html,$prefix/\0,;" || \
-                continue
+              echo "$line" | sed "s,\(manual\|api\)\.html,$prefix/\0,;"
             fi
           done < docs/changelog.md >> log.md
       - name: Create release
