import clojure lexer from vis revision 40c387a

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -41,6 +41,8 @@ file.patterns.boo=*.boo
 lexer.$(file.patterns.boo)=lpeg_boo
 file.patterns.csharp=*.cs
 lexer.$(file.patterns.csharp)=lpeg_csharp
+file.patterns.clojure=*.clj;*.cljc;*cljs;*.edn
+lexer.$(file.patterns.clojure)=lpeg_clojure
 file.patterns.c=*.c;*.cc;*.C
 lexer.$(file.patterns.c)=lpeg_ansi_c
 file.patterns.cpp=*.cpp;*.cxx;*.c++;*.h;*.hh;*.hpp;*.hxx;*.h++
