--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -71,6 +71,8 @@ file.patterns.dockerfile=Dockerfile
 lexer.$(file.patterns.dockerfile)=lpeg_dockerfile
 file.patterns.dot=*.dot
 lexer.$(file.patterns.dot)=lpeg_dot
+file.patterns.dsv=*.group;*.gshadow;*.passwd;*.shadow
+lexer.$(file.patterns.dot)=lpeg_dsv
 file.patterns.eiffel=*.e;*.eif
 lexer.$(file.patterns.eiffel)=lpeg_eiffel
 file.patterns.elixir=*.ex;*.exs
