import elm lexer from vis revision 40c387a

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -77,6 +77,8 @@ file.patterns.eiffel=*.e;*.eif
 lexer.$(file.patterns.eiffel)=lpeg_eiffel
 file.patterns.elixir=*.ex;*.exs
 lexer.$(file.patterns.elixir)=lpeg_elixir
+file.patterns.elm=*.elm
+lexer.$(file.patterns.elm)=lpeg_elm
 file.patterns.erlang=*.erl;*.hrl
 lexer.$(file.patterns.erlang)=lpeg_erlang
 file.patterns.fsharp=*.fs
