import fantom lexer from vis revision 40c387a

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -81,6 +81,8 @@ file.patterns.elm=*.elm
 lexer.$(file.patterns.elm)=lpeg_elm
 file.patterns.erlang=*.erl;*.hrl
 lexer.$(file.patterns.erlang)=lpeg_erlang
+file.patterns.fantom=*.fan
+lexer.$(file.patterns.fantom)=lpeg_fantom
 file.patterns.fsharp=*.fs
 lexer.$(file.patterns.fsharp)=lpeg_fsharp
 file.patterns.faust=*.dsp
