import fstab lexer from vis revision 40c387a

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -85,6 +85,8 @@ file.patterns.fantom=*.fan
 lexer.$(file.patterns.fantom)=lpeg_fantom
 file.patterns.fsharp=*.fs
 lexer.$(file.patterns.fsharp)=lpeg_fsharp
+file.patterns.fsharp=fstab
+lexer.$(file.patterns.fstab)=lpeg_fstab
 file.patterns.faust=*.dsp
 lexer.$(file.patterns.faust)=lpeg_faust
 file.patterns.fish=*.fish
