fix filenames used for the dsv lexer

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -71,7 +71,7 @@ file.patterns.dockerfile=Dockerfile
 lexer.$(file.patterns.dockerfile)=lpeg_dockerfile
 file.patterns.dot=*.dot
 lexer.$(file.patterns.dot)=lpeg_dot
-file.patterns.dsv=*.group;*.gshadow;*.passwd;*.shadow
+file.patterns.dsv=group;gshadow;passwd;shadow
 lexer.$(file.patterns.dot)=lpeg_dsv
 file.patterns.eiffel=*.e;*.eif
 lexer.$(file.patterns.eiffel)=lpeg_eiffel
