import gemini lexer from vis revision 40c387a

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -103,6 +103,8 @@ file.patterns.gherkin=*.feature
 lexer.$(file.patterns.gherkin)=lpeg_gherkin
 file.patterns.glsl=*.glslf;*.glslv
 lexer.$(file.patterns.glsl)=lpeg_glsl
+file.patterns.gemini=*.gmi
+lexer.$(file.patterns.gemini)=lpeg_gemini
 file.patterns.gnuplot=*.dem;*.plt
 lexer.$(file.patterns.gnuplot)=lpeg_gnuplot
 file.patterns.go=*.go
