import git-rebase lexer from vis revision 40c387a

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -99,6 +99,8 @@ file.patterns.gap=*.g;*.gd;*.gi;*.gap
 lexer.$(file.patterns.gap)=lpeg_gap
 file.patterns.gettext=*.po;*.pot
 lexer.$(file.patterns.gettext)=lpeg_gettext
+file.patterns.git-rebase=git*-rebase*-todo
+lexer.$(file.patterns.git-rebase)=lpeg_git-rebase
 file.patterns.gherkin=*.feature
 lexer.$(file.patterns.gherkin)=lpeg_gherkin
 file.patterns.glsl=*.glslf;*.glslv
