--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -163,6 +163,8 @@ file.patterns.man=*.1;*.2;*.3;*.4;*.5;*.6;*.7;*.8;*.9;*.1x;*.2x;*.3x;*.4x;*.5x;*
 lexer.$(file.patterns.man)=lpeg_man
 file.patterns.markdown=*.md
 lexer.$(file.patterns.markdown)=lpeg_markdown
+file.patterns.meson=*.meson*.build
+lexer.$(file.patterns.meson)=lpeg_meson
 file.patterns.moonscript=*.moon
 lexer.$(file.patterns.moonscript)=lpeg_moonscript
 file.patterns.myrddin=*.myr
