import networkd lexer from vis revision 40c387a

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -171,6 +171,8 @@ file.patterns.myrddin=*.myr
 lexer.$(file.patterns.myrddin)=lpeg_myrddin
 file.patterns.nemerle=*.n
 lexer.$(file.patterns.nemerle)=lpeg_nemerle
+file.patterns.networkd=*.link;*.network;*.netdev
+lexer.$(file.patterns.networkd)=lpeg_networkd
 file.patterns.nim=*.nim
 lexer.$(file.patterns.nim)=lpeg_nim
 file.patterns.nsis=*.nsh;*.nsi;*.nsis
