--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -195,6 +195,8 @@ file.patterns.pkgbuild=*.PKGBUILD
 lexer.$(file.patterns.pkgbuild)=lpeg_pkgbuild
 file.patterns.ps=*.eps;*.ps
 lexer.$(file.patterns.ps)=lpeg_ps
+file.patterns.pony=*.pony
+lexer.$(file.patterns.pony)=lpeg_pony
 file.patterns.powershell=*.ps1
 lexer.$(file.patterns.powershell)=lpeg_powershell
 file.patterns.prolog=*.prolog
