import reason lexer from vis revision 40c387a

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -211,6 +211,8 @@ file.patterns.py=*.sc;*.py;*.pyw
 lexer.$(file.patterns.py)=lpeg_python
 file.patterns.r=*.R;*.Rout;*.Rhistory;*.Rt;Rout.save;Rout.fail;*.S
 lexer.$(file.patterns.r)=lpeg_rstats
+file.patterns.reason=*.re
+lexer.$(file.patterns.reason)=lpeg_reason
 file.patterns.rebol=*.r;*.reb
 lexer.$(file.patterns.rebol)=lpeg_rebol
 file.patterns.rest=*.rst
