import routeros lexer from vis revision 40c387a

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -221,6 +221,8 @@ file.patterns.rexx=*.orx;*.rex
 lexer.$(file.patterns.rexx)=lpeg_rexx
 file.patterns.rhtml=*.erb;*.rhtml
 lexer.$(file.patterns.rhtml)=lpeg_rhtml
+file.patterns.routeros=*.rsc
+lexer.$(file.patterns.routeros)=lpeg_routeros
 file.patterns.rb=Rakefile;*.rake;*.rb;*.rbw
 lexer.$(file.patterns.rb)=lpeg_ruby
 file.patterns.rust=*.rs
