import spin lexer from vis revision 40c387a

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -241,6 +241,8 @@ file.patterns.sml=*.sml;*.fun;*.sig
 lexer.$(file.patterns.sml)=lpeg_sml
 file.patterns.snobol4=*.sno;*.SNO
 lexer.$(file.patterns.snobol4)=lpeg_snobol4
+file.patterns.spin=*.spin
+lexer.$(file.patterns.spin)=lpeg_spin
 file.patterns.sql=*.ddl;*.sql
 lexer.$(file.patterns.sql)=lpeg_sql
 file.patterns.taskpaper=*.taskpaper
