import systemd lexer from vis revision 40c387a

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -245,6 +245,8 @@ file.patterns.spin=*.spin
 lexer.$(file.patterns.spin)=lpeg_spin
 file.patterns.sql=*.ddl;*.sql
 lexer.$(file.patterns.sql)=lpeg_sql
+file.patterns.systemd=*.automount;*.device;*.mount;*.path;*.scope;*.services;*.slice;*.socket;*.swap;*.target;*.timer
+lexer.$(file.patterns.systemd)=lpeg_systemd
 file.patterns.taskpaper=*.taskpaper
 lexer.$(file.patterns.taskpaper)=lpeg_taskpaper
 file.patterns.tcl=*.tcl;*.tk
