import xs lexer from vis revision 40c387a

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -269,6 +269,8 @@ file.patterns.wsf=*.wsf
 lexer.$(file.patterns.wsf)=lpeg_wsf
 file.patterns.xml=*.dtd;*.svg;*.xml;*.xsd;*.xsl;*.xslt;*.xul
 lexer.$(file.patterns.xml)=lpeg_xml
+file.patterns.xs=*.xs;*.xsin;*.xsrc
+lexer.$(file.patterns.xs)=lpeg_xs
 file.patterns.xtend=*.xtend
 lexer.$(file.patterns.xtend)=lpeg_xtend
 file.patterns.yaml=*.yaml
