Fixed minor extension mapping issues.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -81,7 +81,7 @@ file.patterns.faust=*.dsp
 lexer.$(file.patterns.faust)=lpeg_faust
 file.patterns.fish=*.fish
 lexer.$(file.patterns.fish)=lpeg_fish
-file.patterns.forth=*.forth;*.frt;*.fs;*.fth
+file.patterns.forth=*.forth;*.frt;*.fth
 lexer.$(file.patterns.forth)=lpeg_forth
 file.patterns.fortran=*.f;*.for;*.ftn;*.fpp;*.f77;*.f90;*.f95;*.f03;*.f08
 lexer.$(file.patterns.fortran)=lpeg_fortran
@@ -167,8 +167,8 @@ file.patterns.perl=*.al;*.perl;*.pl;*.pm;*.pod
 lexer.$(file.patterns.perl)=lpeg_perl
 file.patterns.php=*.inc;*.php;*.php3;*.php4;*.phtml
 lexer.$(file.patterns.php)=lpeg_php
-file.patterns.pico=*.p8
-lexer.$(file.patterns.pico)=lpeg_pico
+file.patterns.pico8=*.p8
+lexer.$(file.patterns.pico8)=lpeg_pico8
 file.patterns.pike=*.pike;*.pmod
 lexer.$(file.patterns.pike)=lpeg_pike
 file.patterns.pkgbuild=*.PKGBUILD
