Added Clojure lexer. Thanks to Christos Chatzifountas.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -47,6 +47,8 @@ file.patterns.cpp=*.cpp;*.cxx;*.c++;*.h;*.hh;*.hpp;*.hxx;*.h++
 lexer.$(file.patterns.cpp)=lpeg_cpp
 file.patterns.chuck=*.ck
 lexer.$(file.patterns.chuck)=lpeg_chuck
+file.patterns.clojure=*.clj;*.cljc;*cljs;*.edn
+lexer.$(file.patterns.clojure)=lpeg_clojure
 file.patterns.cmake=*.cmake;*.cmake.in;*.ctest;*.ctest.in
 lexer.$(file.patterns.cmake)=lpeg_cmake
 file.patterns.coffeescript=*.coffee
