Added Elm lexer. Thanks to Karl Schultheisz.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -74,6 +74,8 @@ lexer.$(file.patterns.dot)=lpeg_dot
 file.patterns.eiffel=*.e;*.eif
 lexer.$(file.patterns.eiffel)=lpeg_eiffel
 file.patterns.elixir=*.ex;*.exs
+file.patterns.elm=*.elm
+lexer.$(file.patterns.elm)=lpeg_elm
 lexer.$(file.patterns.elixir)=lpeg_elixir
 file.patterns.erlang=*.erl;*.hrl
 lexer.$(file.patterns.erlang)=lpeg_erlang
