Added Fantom lexer. Thanks to Simeon Maryasin.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -81,6 +81,8 @@ file.patterns.erlang=*.erl;*.hrl
 lexer.$(file.patterns.erlang)=lpeg_erlang
 file.patterns.fsharp=*.fs
 lexer.$(file.patterns.fsharp)=lpeg_fsharp
+file.patterns.fantom=*.fan
+lexer.$(file.patterns.fantom)=lpeg_fantom
 file.patterns.faust=*.dsp
 lexer.$(file.patterns.faust)=lpeg_faust
 file.patterns.fish=*.fish
